5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1716_2506.log
== TEST (2019-05-16 14:56:19) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1

if(quantidade 2=0):
	print("Extinsão")

else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 11
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:56:42) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- EXECUTION TIME:
0.200319
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:42) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:43) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:43) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:43) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:43) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:43) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:44) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2=0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:57:06) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2 = 0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2 = 0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:57:08) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2 = 0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- ERROR:
File "XXXX", line 10
    if(quantidade 2 = 0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:57:08) 
-- CODE:
anos= 0
quantidade= float(input(""))
percentual-crescimento= float(input(""))
qtd-retirada-ano= float(input(""))
while(0 < quantodade < 12000):
	acrescimento= quantidade + percentual/100
	quantidade += acrescimo
	quantodade -= qtd-retirada-2*0
	anos+=1
if(quantidade 2 = 0):
	print("Extinsão")
else:
	print("Limite")
	print("anos")
-- EXECUTION TIME:
0.211006
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 10
    if(quantidade 2 = 0):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
